yamls/policy-security/248-clusterpolicy.yaml
# Item 248: Kyverno ClusterPolicy - Image Registry
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: enforce
  rules:
    - name: validate-registry
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Images from untrusted registries are not allowed"
        pattern:
          spec:
            containers:
              - image: "gcr.io/* | quay.io/* | docker.io/library/*"
